# cs_tools

./: .gitignore  .pre-commit-config.yaml  .vulture.whitelist.py  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __pyproject.toml  dev-requirements.txt  index.html  install.py  install.sh  mkdocs.yml  noxfile.py  py36-requirements.txt  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tsconfig-template.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml  discussion.yml  feature-request.yml  report-bug.yml  report-docs.yml
.github/workflows/: build-docs.yaml  docs-ci.yaml  ensure-offline-install.yaml  fetch-audit-logs.yaml  fetch-bi-data.yaml  fetch-data.yaml  fetch-metdata.yaml  fetch-tml.yaml  fetch-ts-bi-data.yml  lint.yaml  lint.yml  snowflake_auth_test.yml  test-bootstrapper.yaml  test-syncers.yaml  test.yaml
best-practices/: client-install.md  contributing-workflow.md  venv.md  virtual-environment.md
changelog/1.0.0/: index.html
changelog/1.1.0/: index.html
changelog/1.2.0/: index.html
changelog/1.3.0/: index.html
changelog/1.4.0/: index.html
changelog/1.5.0/: index.html
changelog/1.6.0/: index.html
cs_tools/: __init__.py  __main__.py  __project__.py  _compat.py  _enums.py  _logging.py  _rest_api_v1.py  _schema.py  _types.py  _version.py  api.py  cli.py  const.py  datastructures.py  db_models.py  errors.py  programmatic.py  settings.py  thoughtspot.py  types.py  util.py  utils.py  validators.py
cs_tools/api/: _client.py  _rest_api_v1.py  _rest_api_v2.py  _retry.py  _transport.py  _utils.py  client.py  requirement.py  util.py  utils.py
cs_tools/cli/: __init__.py  _analytics.py  _base.py  _config.py  _loader.py  _log.py  _logging.py  _monkey.py  _self.py  _tools.py  app_config.py  app_log.py  app_tools.py  custom_types.py  dependency.py  grid.py  input.py  layout.py  loader.py  main.py  options.py  progress.py  prompt.py  types.py  util.py  ux.py
cs_tools/data/: enums.py  models.py
cs_tools/helpers/: cli_ux.py  loader.py  pydantclick.py  secrets.py
cs_tools/md_ext/: screenshotter.py
cs_tools/middlewares/: __init__.py  answer.py  connection.py  metadata.py  pinboard.py  search.py  tag.py  user.py
cs_tools/models/: __init__.py  _base.py  auth.py  data.py  dependency.py  metadata.py  periscope.py  security.py  session.py  ts_dataservice.py  user.py
cs_tools/modelsv2/: __init__.py  metadata.py  session.py  ts_dataservice.py  user.py
cs_tools/schema/: user.py
cs_tools/sync/: _compat.py  base.py  protocol.py  register.py  types.py  utils.py
cs_tools/tools/: README.md  common.py
cs_tools/updater/: __init__.py  _bootstrapper.py  _updater.py
cs_tools/util/: __init__.py  algo.py  datetime.py  swagger.py
cst/: api.py  io.py  model.py  util.py
cst/tests/: test_api.py  test_io.py
cstools/: created_objects.py  find_dependencies.py  list_dependencies.py
docs/: getting-started.md  index.md
docs/.overrides/: main.html
docs/archived-best-practices/: style-guide.md  toml-vs-cmdline-args.md  virtual-environment.md
docs/changelog/: 1.0.0.md  1.1.0.md  1.2.0.md  1.3.0.md  1.4.0.md  1.5.0.md  1.6.0.md
docs/cs-tools/: overview.md
docs/css/: custom.css
docs/for-developers/: build-cs-tools.md  contributing.md  documentation.md  environment-setup.md  what-is-markdown.md  writing-documentation.md
docs/guides/: index.md  process-archiver.md  process-searchable.md  process-vcs.md
docs/hooks/: cli_reference_generator.py  mirror_bootstrapper.py  screenshotter.py
docs/how-to/: configuration-file.md  install-upgrade-cs-tools.md  install.md  scheduling-tool-commands.md
docs/js/: konami.js
docs/stylesheets/: extra.css
docs/syncer/: bigquery.md  csv.md  databricks.md  excel.md  falcon.md  gsheets.md  json.md  mock.md  parquet.md  postgres.md  protocol.md  redshift.md  snowflake.md  sqlite.md  starburst.md  trino.md  what-is.md
docs/tools/: index.md
docs/tutorial/: archiver.md  config.md  install.md  intro.md  schedule.md  syncer.md
get/bootstrapper/: index.html
getting-started/: index.html
guides/: index.html
guides/process-archiver/: index.html
guides/process-searchable/: index.html
guides/process-vcs/: index.html
hooks/: _common_hook_utils.py  cli_reference_generator.py  screenshotter.py
scripts/: _vendor-cs_tools.py  cli.py  run_tests.sh  vendor_packages.py  vendor_packages.sh
syncer/bigquery/: index.html
syncer/csv/: index.html
syncer/databricks/: index.html
syncer/excel/: index.html
syncer/falcon/: index.html
syncer/gsheets/: index.html
syncer/json/: index.html
syncer/mock/: index.html
syncer/parquet/: index.html
syncer/postgres/: index.html
syncer/redshift/: index.html
syncer/snowflake/: index.html
syncer/sqlite/: index.html
syncer/starburst/: index.html
syncer/trino/: index.html
syncer/what-is/: index.html
tests/: _perf.py  conftest.py  const.py  fixtures.py  tags.py  test_api_retry.py  test_api_transport.py  test_io.py  test_model.py  test_progress.py  test_searchable_deploy.py  test_searchable_partial_failure.py  test_searchable_transformer.py  test_settings.py  test_sync_snowflake.py  test_utils.py  test_workflows_metadata.py  util.py
tests/.data/: ts-config_version_1_4_x.toml  ts-config_version_1_5_x.toml
tests/cli/: test_cs_tools.py  test_cs_tools_logs.py  test_main.py  test_util.py
tests/programmatic/: test_as_ci.py
tests/rest_api/: test_endpoint_exists.py  test_metadata.py  test_ts_dataservice.py
thoughtspot/: api.py  apiv2.py  model.py  settings.py
thoughtspot/models/: auth.py  base.py  dependency.py  metadata.py
thoughtspot/util/: algo.py  datetime.py  io.py  swagger.py  ux.py
thoughtspot_internal/: _api.py  api.py  datatype.py
thoughtspot_internal/models/: __init__.py  _base.py  dependency.py  metadata.py  periscope.py  security.py
thoughtspot_internal/util/: swagger.py
tools/: 6.0_Table Sharding Recommender.worksheet.yaml  README.md  index.html
tools/archiver/: index.html
tools/bulk-deleter/: index.html
tools/bulk-sharing/: index.html
tools/created objects/: CHANGELOG.md  README.md  created_objects.py
(+444 files in other folders)
