[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "cs_tools"
dynamic = ["version"]
description = "Scale your ThoughtSpot adoption with tools created by the ThoughtSpot Solutions Consulting organization."
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
authors = [
	{name = "boonhapus", email="nicholas.cooper@thoughtspot.com"},
	{name = "billdback-ts", email="bill.back@thoughtspot.com"},
	{name = "devinmcpherson-ts", email="devin.mcpherson@thoughtspot.com"},
	{name = "mishathoughtspot", email="misha.beek@thoughtspot.com"},
]
maintainers = [
    {name = "boonhapus", email="nicholas.cooper@thoughtspot.com"},
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # dependencies here are listed for cs_tools the library  (ie. import cs_tools)
    "pip >= 23.1",

    "thoughtspot_tml",
    "awesomeversion",
    "httpx",
    "pydantic",
    "pendulum",
    "rich",
    "sqlmodel",
    "toml",

    # version specific
    "strenum >= 0.4.9; python_version < '3.11.0'",
]

[project.urls]
homepage = "https://thoughtspot.github.io/cs_tools/"
repository = "https://github.com/thoughtspot/cs_tools"
bug_tracker = "https://github.com/thoughtspot/cs_tools/issues"
documentation = "https://thoughtspot.github.io/cs_tools/"

[project.optional-dependencies]
cli = [
    # pin these dependencies explicitly so we can ensure they work across environments
    # 
    # DEV NOTE @boonhapus 2023/01/14
    #   these are only the direct dependencies, NOT the transitive dependencies.. so we
    #   need an extra process to grab the grandchild dependencies so our direct reliance
    #   doesn't break when a child updates.
    #

    # platform-specific
    "pyreadline3 >= 3.4.1 ; sys_platform == 'win32'",

    # CLI
    "typer[all] >= 0.9.0",

    # WEB
    "litestar",
]
dev = [
    # CS Tools CLI
    "cs_tools[cli]",

    # Code Quality
    "pre-commit",
    "ruff",
    "black",
    "mypy",

    # Testing
    "nox",
    "ward",
    "coverage[toml]",
]
docs = [
    "cs_tools[cli]",
    "mkdocs-material",
    # Plugins..
    "mkdocs-glightbox",
    "mkdocs-open-in-new-tab",
]

[project.scripts]
cs_tools = "cs_tools.cli.main:run"
cstools = "cs_tools.cli.main:run"


[tool.setuptools.dynamic]
version = {attr = "cs_tools._version.__version__"}

# [tool.isort]
# profile = "black"
# line_length = 120
# from_first = true
# length_sort = true
# reverse_sort = true

[tool.black]
line-length = 120
exclude = '''
(
      __pycache__   # ignore compiled bytecode
    | \.venv*       # ignore virtual environments
    | \.nox         # ignore virtual environments
)
'''

# [tool.mypy]
# exclude = '''
# (?x)(
#     ^_scriptability.py$  # ignore auto-generated files
# )
# '''

[tool.ruff]
line-length = 120
select = [
    "A",     # flake8-builtins: https://pypi.org/project/flake8-builtins/
    "ARG",   # flake8-unused-arguments: https://pypi.org/project/flake8-unused-arguments/
    "B",     # flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "C4",    # flake8-comprehensions: https://pypi.org/project/flake8-comprehensions/
    "C90",   # mccabe: https://pypi.org/project/mccabe/
    "COM",   # flake8-commas: https://pypi.org/project/flake8-commas/
    "DTZ",   # flake8-datetimez: https://pypi.org/project/flake8-datetimez/
    "E",     # pycodestyle: https://pypi.org/project/pycodestyle/
    "F",     # pyflakes: https://pypi.org/project/pyflakes/
    "FA",    # flake8-future-annotations: https://pypi.org/project/flake8-future-annotations/
    "I",     # isort: https://pypi.org/project/isort/
    "Q",     # flake8-quotes: https://pypi.org/project/flake8-quotes/
    "RUF",   # ruff-specific: https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
    "T20",   # flake8-print: https://pypi.org/project/flake8-print/
    "TCH",   # flake8-type-checking: https://pypi.org/project/flake8-type-checking/
]
ignore = ["B008"]
src = ["cs_tools"]
exclude = [
    "__pycache__",   # ignore compiled bytecode
    ".venv*",        # ignore virtual environments
    ".nox",          # ignore virtual environments

    # project specific ignores
    "*compat.py",    # ignore compatibles
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
datetime = "dt"
sqlalchemy = "sa"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
from-first = true
required-imports = ["from __future__ import annotations"]

[tool.ward]
path = "tests/"

# [tool.coverage.run]
# branch = true
# include = [
#     "cs_tools/**.py",
# ]

# [tool.coverage.report]
# exclude_lines = [
#     "# pragma: no cover",
#     "# pragma: peephole optimzer",
#     "raise NotImplementedError",
#     "if __name__ == .__main__.:",
#     "if TYPE_CHECKING:",
#     "if typing.TYPE_CHECKING:",
# ]
